gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail15616b.d
version https://git-lfs.github.com/spec/v1
oid sha256:5263bacc027db399a8a7be651044a509c0a587c379c5e5c2d7b51193b65675d3
size 1716
